[project]
authors = [{ name = "Bruno Thiago", email = "brunothiagorvs@gmail.com" }]
dependencies = ["rvt-py>=2.2.3,<3"]
name = "cau_project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cau_project = { path = ".", editable = true }

[tool.pixi.tasks]
start = "streamlit run main.py --server.headless true --server.runOnSave true"

[tool.pixi.dependencies]
streamlit = ">=1.59.2,<2"
gdal = ">=3.13.1,<4"
geemap = "0.36.*"
